Fix CI/CD pipeline: Add tests (JUnit/Mockito), JaCoCo coverage, fix jpackage by using Launcher and removing module-info